apps/monitoring/prometheus/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - prometheus.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
